2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Fixed cleanup of temp. files used by testsuite.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Hooked into the new common test support code.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* pop3.test: Fixed [SF Tcllib Bug 1316056]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* clnt.tcl: Removed old unused code. It was part of the testsuite
	* srv.tcl:  in the very beginning. It was unused in the first
	  rewrite to the old sub process and dialog facility.

	* pop3.test: Rewritten to use the new facilities for programmed
	  interaction and sub processes.

	* pop3.tcl (::pop3::open): Capitalized the user and pass
	  commands. Every command in the wire is now fully capitalized.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Added code to remove the temp. file containing the
	  server log.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Version bumped up to 1.6.1.
	* pop3.man:

	* pop3.test: New test for the corner case.
	* pop3.tcl (::pop3::RetrFast): Thanks to Clif Flynt for reporting a